objects/Account.object
<CustomObject>
    <fields>
        <fullName>AFS_Client_Notes__c</fullName>
        <label>ARS Client Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFS_Contact_One__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ARS Contact One</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (AFS Contact One)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AFS_Contact_Two__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ARS Contact Two</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (AFS Contact Two)</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AFS_Email_Lead_Creation__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4724174?aId=&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARS Email Lead Creation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFS_Lead_Timestamp2__c</fullName>
        <label>ARS Lead Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AFS_Mktg_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The specific campaign where the AFS lead came from. Which event, marketing campaign, email drip, or employee.</inlineHelpText>
        <label>ARS Mktg Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts (AFS Mktg Campaign)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AFS_Representative__c</fullName>
        <label>ARS Representative</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dwain Blake</fullName>
                </value>
                <value>
                    <fullName>Erik Dodds</fullName>
                </value>
                <value>
                    <fullName>Greg Boots</fullName>
                </value>
                <value>
                    <fullName>Kenner French</fullName>
                </value>
                <value>
                    <fullName>Marco Sanchez</fullName>
                </value>
                <value>
                    <fullName>Priscella O&apos;Shea</fullName>
                </value>
                <value>
                    <fullName>Regina Thompson</fullName>
                </value>
                <value>
                    <fullName>Stephen Eppich</fullName>
                </value>
                <value>
                    <fullName>Dr. Craig Ponder</fullName>
                </value>
                <value>
                    <fullName>Roland Chow</fullName>
                </value>
                <value>
                    <fullName>Charles Henry</fullName>
                    <isActive>false</isActive>
                    <label>Charles Henry</label>
                </value>
                <value>
                    <fullName>Michael Gorman</fullName>
                    <isActive>false</isActive>
                    <label>Michael Gorman</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFS_Source__c</fullName>
        <inlineHelpText>For leads sent to AFS - need to indicate where the lead came from and whom. AFS MKTG CAMPAIGN field should list the specific event, marketing campaign, email drip, or employee that referred the lead.</inlineHelpText>
        <label>ARS Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABA Employee Referral</fullName>
                </value>
                <value>
                    <fullName>Event Lead</fullName>
                </value>
                <value>
                    <fullName>Online Lead</fullName>
                </value>
                <value>
                    <fullName>Email Drip Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AMS_update__c</fullName>
        <label>AutoMagic Sync Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASCaller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The assigned Anderson System Advisor</inlineHelpText>
        <label>Anderson System Caller</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AS_Binder_Needs_to_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AS Binder Needs to Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AS_Binder_Sent__c</fullName>
        <inlineHelpText>Date the AS Binder was sent to the client.  See Activity History for shipment details.</inlineHelpText>
        <label>AS Binder Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AS_Binder_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AS Binder Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AS_Binder_Workflow__c</fullName>
        <label>AS Binder Workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AS_Call_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the client does not wish to receive AS Calls.</inlineHelpText>
        <label>AS Call Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AS_Case_Id__c</fullName>
        <label>AS Case Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Case_Started__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AS Case Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVSFQB__QB_Error__c</fullName>
        <label>QB Error</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVSFQB__Quickbooks_Id__c</fullName>
        <externalId>true</externalId>
        <label>Quickbooks Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acc_Recv_Under30__c</fullName>
        <label>Acc Recv Under30</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Audit_Notes__c</fullName>
        <inlineHelpText>Account auditing notes</inlineHelpText>
        <label>Account Audit Notes</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Audit_Status__c</fullName>
        <inlineHelpText>This current status of auditing the account.</inlineHelpText>
        <label>Account Audit Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Structure Needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_Round_Robin__c</fullName>
        <formula>MOD(VALUE(  Account_Number__c) ,2) +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number Round Robin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Accounting_Coordinators_Email__c</fullName>
        <description>Accounting Coordinators Email</description>
        <label>Accounting Coordinators Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Accounting_Coordinators_Phone__c</fullName>
        <description>Accounting Coordinators Phone</description>
        <label>Accounting Coordinators Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Coordinators_Pic__c</fullName>
        <formula>IF(ISBLANK(Accounting_ImageURL__c), IMAGE(&quot;https://drive.google.com/uc?&amp;id=0B05cYQRrxSNYZHRNN2R3RUZQUE0&quot;, &quot;Anderson&quot;,75,75),
IMAGE(Accounting_ImageURL__c,&quot;Bookkeeper Pic&quot;,75,75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Coordinators Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Coordinators__c</fullName>
        <label>Client Tax Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alex Price</fullName>
                </value>
                <value>
                    <fullName>Alicefaye Camper</fullName>
                </value>
                <value>
                    <fullName>Andrew Grigsby</fullName>
                </value>
                <value>
                    <fullName>Andy Romero</fullName>
                    <isActive>false</isActive>
                    <label>Andy Romero</label>
                </value>
                <value>
                    <fullName>Angelica Nance</fullName>
                    <isActive>false</isActive>
                    <label>Angelica Nance</label>
                </value>
                <value>
                    <fullName>Anthony Espada</fullName>
                </value>
                <value>
                    <fullName>Ashley Silafau-Sanitoa</fullName>
                    <isActive>false</isActive>
                    <label>Ashley Silafau-Sanitoa</label>
                </value>
                <value>
                    <fullName>Azia Brown</fullName>
                    <isActive>false</isActive>
                    <label>Azia Brown</label>
                </value>
                <value>
                    <fullName>Brina DeLeon</fullName>
                </value>
                <value>
                    <fullName>Candy Adauto</fullName>
                    <isActive>false</isActive>
                    <label>Candy Adauto</label>
                </value>
                <value>
                    <fullName>Carisma James</fullName>
                </value>
                <value>
                    <fullName>Carly McClean</fullName>
                    <isActive>false</isActive>
                    <label>Carly McClean</label>
                </value>
                <value>
                    <fullName>Chloe Freeman</fullName>
                </value>
                <value>
                    <fullName>Christos Zattas</fullName>
                </value>
                <value>
                    <fullName>Corbin Roache</fullName>
                </value>
                <value>
                    <fullName>Erica Kelly</fullName>
                    <isActive>false</isActive>
                    <label>Erica Kelly</label>
                </value>
                <value>
                    <fullName>Eric Harding</fullName>
                    <isActive>false</isActive>
                    <label>Eric Harding</label>
                </value>
                <value>
                    <fullName>Freddi Mitchell</fullName>
                </value>
                <value>
                    <fullName>Gatsby Darwin</fullName>
                    <isActive>false</isActive>
                    <label>Gatsby Darwin</label>
                </value>
                <value>
                    <fullName>Holly Hartman</fullName>
                </value>
                <value>
                    <fullName>Jazmine Gonzalez</fullName>
                    <isActive>false</isActive>
                    <label>Jazmine Gonzalez</label>
                </value>
                <value>
                    <fullName>Julianna Jones</fullName>
                    <isActive>false</isActive>
                    <label>Julianna Jones</label>
                </value>
                <value>
                    <fullName>Kaitlyn Scrivener</fullName>
                </value>
                <value>
                    <fullName>Kelly Andrews</fullName>
                </value>
                <value>
                    <fullName>Marissa Yadao</fullName>
                </value>
                <value>
                    <fullName>Megan Harris</fullName>
                </value>
                <value>
                    <fullName>Micah Wyllie</fullName>
                </value>
                <value>
                    <fullName>Michael Kemp</fullName>
                    <isActive>false</isActive>
                    <label>Michael Kemp</label>
                </value>
                <value>
                    <fullName>Olga Kochubey</fullName>
                    <isActive>false</isActive>
                    <label>Olga Kochubey</label>
                </value>
                <value>
                    <fullName>Paul Scarnechia</fullName>
                    <isActive>false</isActive>
                    <label>Paul Scarnechia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accounting_ImageURL__c</fullName>
        <description>Accounting_ImageURL</description>
        <label>Accounting_ImageURL</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Advisor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Advisors use this to check if they are actively engaged in a sales opportunity with this client. Once a sales opportunity has ended because of a sale or nosale, the box is to be unchecked. The only time a box should be checked is if an Advisor has an OPEN opportunity.</description>
        <inlineHelpText>Advisors use this to check if they are actively engaged in a sales opportunity with this client. The only time a box should be checked is if an Advisor has an OPEN opportunity.</inlineHelpText>
        <label>Active Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Primary_to_Campaign_CampId__c</fullName>
        <label>Add Primary to Campaign CampId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Add_Primary_to_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add Primary to Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_To_Use_For_Print_Label__c</fullName>
        <inlineHelpText>In order to Print an Address Label please select which Address you wish to Print a Label for.</inlineHelpText>
        <label>Address To Use For Print Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Primary Shipping</fullName>
                </value>
                <value>
                    <fullName>Alternate Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adjusted_CAP_Date__c</fullName>
        <label>Adjusted CAP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advisor_Approved__c</fullName>
        <inlineHelpText>This is the Advisor who approved the structure</inlineHelpText>
        <label>Advisor Who Approved Blueprint</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Advisors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advisor_Notes__c</fullName>
        <inlineHelpText>Notes section for Advisors</inlineHelpText>
        <label>Update Advisor Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Affiliate_Sourced__c</fullName>
        <formula>IF( CONTAINS(Original_Campaign_Source__r.Parent.Name,&apos;Affiliate&apos;),TRUE,
IF( CONTAINS(Original_Campaign_Source__r.Parent.Parent.Name,&apos;Affiliate&apos;),TRUE,
IF( CONTAINS(Original_Campaign_Source__r.Parent.Parent.Parent.Name,&apos;Affiliate&apos;),TRUE,
IF( CONTAINS(Original_Campaign_Source__r.Parent.Parent.Parent.Parent.Name,&apos;Affiliate&apos;),TRUE,
FALSE
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Sourced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alliance_Converted_Date__c</fullName>
        <label>Alliance Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Alliance lead dialer currently assigned/working with this client</description>
        <inlineHelpText>Alliance lead dialer currently assigned/working with this client</inlineHelpText>
        <label>Alliance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_Address_Notes__c</fullName>
        <inlineHelpText>Please enter pertaining to the Alternate Shipping Address field and when it should be used.</inlineHelpText>
        <label>Alternate Shipping Address Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_City__c</fullName>
        <inlineHelpText>Alternate Shipping City</inlineHelpText>
        <label>Alternate Shipping City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_Country__c</fullName>
        <defaultValue>&quot;United States&quot;</defaultValue>
        <inlineHelpText>Alternate Shipping Country</inlineHelpText>
        <label>Alternate Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_State_Province__c</fullName>
        <inlineHelpText>Alternate Shipping State/Provice</inlineHelpText>
        <label>Alternate Shipping State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_Street__c</fullName>
        <inlineHelpText>Alternate Shipping Street</inlineHelpText>
        <label>Alternate Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Shipping_Zip_Postal_Code__c</fullName>
        <inlineHelpText>Alternate Shipping Zip/Postal Code</inlineHelpText>
        <label>Alternate Shipping Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedBCPManager_ImageUrl__c</fullName>
        <description>AssignedBCPManager_ImageUrl</description>
        <label>AssignedBCPManager_ImageUrl</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_BCP_Manager_Email__c</fullName>
        <description>Assigned BCP Manager Email</description>
        <label>Assigned BCP Advisors Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_BCP_Manager_Phone__c</fullName>
        <description>Assigned BCP Manager Phone</description>
        <label>Assigned BCP Advisors Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_BCP_Manager_Pic__c</fullName>
        <formula>IF(ISBLANK(AssignedBCPManager_ImageUrl__c), IMAGE(&quot;https://drive.google.com/uc?&amp;id=0B05cYQRrxSNYZHRNN2R3RUZQUE0&quot;, &quot;Anderson&quot;,75,75),
IMAGE(AssignedBCPManager_ImageUrl__c,&quot;Bookkeeper Pic&quot;,75,75)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned BCP Advisors Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_BCP_Rep__c</fullName>
        <label>Assigned BCP Advisors</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BCP_Reps</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_CAM__c</fullName>
        <description>Cam Assigned to the account</description>
        <label>Assigned CAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CAM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_CSR__c</fullName>
        <label>Assigned Client Success Coordinator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CSR</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Event_Specialist__c</fullName>
        <label>Assigned Event Specialist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cindi Markus</fullName>
                </value>
                <value>
                    <fullName>David Maddox</fullName>
                </value>
                <value>
                    <fullName>Suzanne Wood</fullName>
                </value>
                <value>
                    <fullName>Tameka Fulton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Law_Coordinator_Email__c</fullName>
        <description>Assigned Law Coordinator Email</description>
        <label>Assigned Client Success Coordinator Emai</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assigned_Law_Coordinator_Phone__c</fullName>
        <description>Assigned Law Coordinator Phone</description>
        <label>Assigned Client Success Coordinator Phon</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Renewal_Advisor__c</fullName>
        <label>Assigned Renewal Advisor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Renewal_Advisors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_of_Interest_Form__c</fullName>
        <formula>&quot;https://www.tfaforms.com/4769204?cId=&quot; +  Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assignment of Interest Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assivo_Team_Member__c</fullName>
        <description>Used to record which Assivo team member completed the Blueprint conversion.</description>
        <label>Assivo Team Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Member One</fullName>
                </value>
                <value>
                    <fullName>Team Member Two</fullName>
                </value>
                <value>
                    <fullName>Team Member Three</fullName>
                </value>
                <value>
                    <fullName>Nick</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor_Name__c</fullName>
        <formula>Auditor__r.FirstName + &apos; &apos; + Auditor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auditor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person responsible for completing the most recent audit.</inlineHelpText>
        <label>Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Sale__c</fullName>
        <formula>Total_Value_of_All_Sales__c /  Number_of_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BCP_CAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary Field used for CAP data load.</description>
        <label>BCP CAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BKG_vCita_Conductor__c</fullName>
        <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;congaemailtemplateid=a0yU0000007qXdH&quot; + 
&quot;&amp;reportid=00OU0000003I7DU&quot; + 
&quot;&amp;emailfromid=0D2U0000002AGiq&quot; + 
&quot;&amp;emailsubject=Schedule a time with your Bookkeeper&quot; + 
&quot;&amp;ac0=1&quot; + 
&quot;&amp;ac1=Bookkeeping vCita Email.&quot; + 
&quot;&amp;qmode=SendEmail&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BKG vCita Conductor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeServiceItems__c</fullName>
        <label>BadgeServiceItems</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Base_Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Url_for_Report__c</fullName>
        <formula>Base_Url__c +&quot;s/report/00O6f000007jXelEAE?reportFilters=%5B%7B%22operator%22%3A%22equals%22%2C%22value%22%3A%22&quot; + Id+&quot; %22%2C%22column%22%3A%22ACCOUNT_ID%22%7D%5D&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sale itemized -Base Url for Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddressis_blank__c</fullName>
        <formula>If( ISBLANK( BillingAddress ),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BillingAddressis blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bk_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bk Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blueprint_Created_By__c</fullName>
        <label>Blueprint Created By:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Blueprint_Modifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blueprint_Created_Date__c</fullName>
        <label>Blueprint Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Blueprint_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if Blueprint is created for the client</description>
        <inlineHelpText>Check if Blueprint is created for the client</inlineHelpText>
        <label>Blueprint Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blueprint_Last_Approved_Date__c</fullName>
        <label>Blueprint Last Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Blueprint_Last_Revised_Date__c</fullName>
        <inlineHelpText>Date the Blueprint was last revised</inlineHelpText>
        <label>Blueprint Last Revised Date:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blueprint_Last_Revised_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Rep to last Revise the Blueprint</inlineHelpText>
        <label>Blueprint Last Revised By:</label>
        <referenceTo>Sales_Rep__c</referenceTo>
        <relationshipLabel>Accounts (Blueprint Last Revised by:)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blueprint_Modifier__c</fullName>
        <label>Blueprint Last Revised By:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Blueprint_Modifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blueprint_Rollup_Hidden__c</fullName>
        <defaultValue>0</defaultValue>
        <description>BluePrint Rollup- Used to check if Blueprint is created for the client .Its used by RollupHelper</description>
        <label>Blueprint Rollup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blueprint_Update_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blueprint Update Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blueprint_link_for_Conga__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&apos;/apex/BluePrintImageOnly?id=&apos;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blueprint link for Conga</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Email__c</fullName>
        <description>Bookkeeper Email</description>
        <label>Bookkeeper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Extension__c</fullName>
        <label>Bookkeeper_Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_ImageURL__c</fullName>
        <label>Bookkeeper_ImageURL</label>
        <length>192</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Phone__c</fullName>
        <description>Bookkeeper Phone</description>
        <label>Bookkeeper Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Pic__c</fullName>
        <formula>IF(ISBLANK(Bookkeeper_ImageURL__c),  IMAGE(&quot;https://drive.google.com/uc?&amp;id=0B05cYQRrxSNYZHRNN2R3RUZQUE0&quot;, &quot;Anderson&quot;,75,75),
IMAGE(Bookkeeper_ImageURL__c ,&quot;Bookkeeper Pic&quot;,75,75)
			)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookkeeper Pic</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper_Picklist__c</fullName>
        <label>Bookkeeper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Bookkeeping_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bookkeeper_Text__c</fullName>
        <label>Bookkeeper Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookkeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Bookkeeper assigned.</inlineHelpText>
        <label>Bookkeeper</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bookkeeping_Notes__c</fullName>
        <label>Bookkeeping Notes</label>
        <length>300</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Box_Viewable_Folder__c</fullName>
        <description>Viewable folder for client in box - custom to them.</description>
        <inlineHelpText>get link from &quot;Viewable Folder&quot; in box client folder.</inlineHelpText>
        <label>Box Viewable Folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Business_Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Business Partner Contact)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAM_Email__c</fullName>
        <formula>CAM_Email_add__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Email_add__c</fullName>
        <label>CAM Email</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Ext__c</fullName>
        <formula>CAM_Extn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAM Ext</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Extn__c</fullName>
        <label>CAM Extension</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_ImageURL__c</fullName>
        <label>CAM_ImageURL</label>
        <length>192</length>
        <type>Text</type>
    </fields>
</CustomObject>